--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,9 @@ author :
   email : ankur@ankurs.com
   github : ankurs
   twitter : Ankur
-  feedburner : feedname
+  feedburner : ankurs-blog
+  feedname: ankurs-blog
+  linkedin: in/ankurshrivastava
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -26,7 +28,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://ankurs.github.com
+production_url : http://blog.ankurs.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -81,7 +83,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : jekyllbootstrap
+      short_name : ankurs
     livefyre :
       site_id : 123
     intensedebate :
@@ -111,7 +113,7 @@ JB :
   # Set 'provider' to false to turn sharing off globally.
   #
   sharing :
-    provider : false
+    provider : tweet
     
   # Settings for all other include helpers can be defined by creating 
   # a hash with key named for the given helper. ex:
