--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Uncertain Binary Thoughts
+title : Life Universe and Everything!
 tagline: 0101010111101010001
 author :
   name : Ankur Shrivastava
